aligning pages correctly

--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -1,8 +1,8 @@
 .Layout {
-  display: flex;
-  align-items: center;
-
-  @media screen and (max-height: 800px){
-     align-items: flex-end;
-  }
+  //display: flex;
+  //align-items: center;
+  //
+  //@media screen and (max-height: 800px){
+  //   align-items: flex-end;
+  //}
 }
